--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
-# GEMINI_API_KEY: Required for Gemini AI API calls.
-# AI Studio automatically injects this at runtime from user secrets.
-# Users configure this via the Secrets panel in the AI Studio UI.
-GEMINI_API_KEY="MY_GEMINI_API_KEY"
+# Webhook URL to receive lead form submissions from /api/lead
+LEAD_WEBHOOK_URL="https://example.com/webhook"
 
-# APP_URL: The URL where this applet is hosted.
-# AI Studio automatically injects this at runtime with the Cloud Run service URL.
-# Used for self-referential links, OAuth callbacks, and API endpoints.
-APP_URL="MY_APP_URL"
+# Optional: enable client-side admin panel (disabled by default)
+VITE_ADMIN_ENABLED="false"
+
+# Public site URL for sitemap/canonical references
+APP_URL="https://fattakhovhragency.vercel.app"
