feat: add telegram fallback for lead delivery

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-# Webhook URL to receive lead form submissions from /api/lead
+# Primary destination: generic webhook for lead form submissions from /api/lead
 LEAD_WEBHOOK_URL="https://example.com/webhook"
+
+# Fallback destination (if LEAD_WEBHOOK_URL is empty): Telegram bot delivery
+TG_BOT_TOKEN="123456:ABC"
+TG_CHAT_ID="123456789"
 
 # Optional: enable client-side admin panel (disabled by default)
 VITE_ADMIN_ENABLED="false"
