feat: add optional Turnstile + lead delivery failure alerts

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ LEAD_WEBHOOK_URL="https://example.com/webhook"
 TG_BOT_TOKEN="123456:ABC"
 TG_CHAT_ID="123456789"
 
+# Optional Cloudflare Turnstile spam protection
+VITE_TURNSTILE_SITE_KEY=""
+TURNSTILE_SECRET_KEY=""
+
 # Optional: enable client-side admin panel (disabled by default)
 VITE_ADMIN_ENABLED="false"
 
