--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,16 @@ TG_CHAT_ID="123456789"
 VITE_TURNSTILE_SITE_KEY=""
 TURNSTILE_SECRET_KEY=""
 
-# Optional: enable client-side admin panel (disabled by default)
+# Optional: enable client-side admin panel
 VITE_ADMIN_ENABLED="false"
+
+# Admin API auth token (required for article create/update/delete)
+ADMIN_PANEL_TOKEN="change-me"
+
+# Optional GitHub persistence for admin articles (recommended for Vercel)
+GITHUB_REPO="owner/repo"
+GITHUB_TOKEN="ghp_xxx"
+GITHUB_BRANCH="main"
 
 # Public site URL for sitemap/canonical references
 APP_URL="https://fattakhovhragency.vercel.app"
